# Autoplay-AI-SDK

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS_FEEDBACK_TRIAGE.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  sdk-architecture.md
.github/: CODEOWNERS  OPEN_SOURCE_MAINTAINER_CHECKLIST.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  gitleaks.yml  pr-title-check.yml  publish.yml
autoplay_sdk/: __init__.py  agent_context.py  buffer.py  exceptions.py  install_skills.py  rag.py  summarizer.py  user_index.py  webhook_receiver.py
autoplay_sdk/admin/: __init__.py  onboard.py  product_onboarding.py  render_products_config.py
autoplay_sdk/agent_states/: README.md  __init__.py  state_machine.py  types.py
autoplay_sdk/integrations/: intercom.py  usertour_sse.py
autoplay_sdk/proactive_resilience/: circuit.py  keys.py
autoplay_sdk/proactive_triggers/: judge.py  quick_reply_match.py  registry.py  section_activity.py
autoplay_sdk/prompts/: adoption_copilot.py
autoplay_sdk/serve/: __init__.py  fastapi.py
docs/: changelog.mdx  docs.json  quickstart.mdx
docs/integrations/: help-scout.mdx  hubspot-chat.mdx
docs/sdk/: agent-states.mdx  async-client.mdx  (+10 more)
sdk/: CHANGELOG.md  INTEGRATION.md  README.md  RELEASE_CHECKLIST.md  pyproject.toml
tests/: README.md  stress_test_sdk.py  test_judge.py  test_pending_tour_offer_resolve.py  test_proactive_intercom_config.py  test_rag_query.py  test_sdk_context_store.py  test_sdk_webhook.py  test_serve_fastapi.py  test_user_index.py  test_user_page_dwell.py
(+172 files in other folders)
