[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoplay-sdk"
version = "0.7.2"
description = "Real-time event streaming client for Autoplay connectors"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["autoplay", "sse", "real-time", "rag", "chatbot", "events"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
redis = ["redis>=4.0.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
autoplay-install-skills = "autoplay_sdk.install_skills:main"

[project.urls]
Homepage = "https://github.com/Autoplay-AI/autoplay-sdk"
Documentation = "https://autoplay-sdk.mintlify.app"
"Bug Tracker" = "https://github.com/Autoplay-AI/autoplay-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["autoplay_sdk"]
include = [
  "autoplay_sdk/py.typed",
  "autoplay_sdk/skills/**/*.md",
]

[tool.hatch.build.targets.sdist]
include = [
    "autoplay_sdk/",
    "README.md",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
